--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,7 @@ permissions:
   contents: read
 jobs:
   testing-api:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
         uses: action/checkout@v3
