--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -30,5 +30,6 @@ jobs:
           pip install -r requirements_test.txt
       - name : Test API
         run: |
-          dvc pull model/model.pkl -r model-track
+          pip3 install --force-reinstall pyOpenSSL
+          dvc pull model/model.pkl -r model-tracker
           pytest test.py
