--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -40,7 +40,7 @@ jobs:
           dvc unprotect model/model.pkl
           dvc repro -f
           echo "Training Completed"
-          dvc add model/model.pkl.dvc -r model-tracker 
+          dvc add model/model.pkl.dvc -r model-tracker --to-remote
           dvc push model/model.pkl.dvc -r model-tracker
       - name: Commit .dvc file changes
         run: |
