--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -45,13 +45,13 @@ jobs:
       - name: Commit .dvc file changes
         run: |
           git config --local user.email "ronnycapriles47@gmail.com"
-          git config --local user.name "github.actions[bot]"
+          git config --local user.name "github-actions[bot]"
           git add model/model.pkl.dvc
-          git commit -m "update model serialization"
+          git commit -m "Updating model serialization"
       - uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: ${{ github.ref }}
       - uses: iterative/setup-cml@v1
       - name: Push metrics
         env:
