Fix yml continuous training

--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -12,8 +12,10 @@ on:
         required: false
         default: running CT
 permissions:
-  id-token: write
-  contents: read
+  contents: write
+  pull-requests: write 
+  issues: read
+  packages: none
 jobs:
   continuous-training:
     runs-on: ubuntu-latest
