Fix yml continuous training

--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -12,6 +12,7 @@ on:
         required: false
         default: running CT
 permissions:
+  id-token: write
   contents: write
   pull-requests: write 
   issues: read
