--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -61,6 +61,6 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cat report.txt >> report.md
-          cml-publish prediction_behavior.png --md >> report.md
+          cml-publish Prediction_behavior.png --md >> report.md
           cml-send-comment report.md
       
