Fix yml continuous training

--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -21,6 +21,11 @@ jobs:
   continuous-training:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Set up Node 16
+          uses: actions/setup-node@v1
+          with:
+            node-version: '16'
       - name: Checkout the repo
         uses: actions/checkout@v3
       - name: Set AWS credentials
